re PR c++/6412 (ice in retrieve_specialization)

PR c++/6412
	* g++.dg/template/friend17.C: New test.

	PR c++/6412
	* cp/decl2.c (arg_assoc_class): Correct check for namespace-scope
	friends.
	* cp/pt.c (instantiate_class_template): Fix formatting.

From-SVN: r64648